--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<script src="cg1.js"></script>
 		<script src="lv1.js"></script>
 		<script src="cg2.js"></script>
+		<script src="cg3.js"></script>
+		<script src="cg4.js"></script>
+		<script src="cg5.js"></script>
+		<script src="cg6.js"></script>
 		<script>title();</script>
 	</body>
 </html>
