--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <html>
 	<head>
 		<title>The Molyneux Experience</title>
+		<style>
+BODY {
+	background: #666;
+}
+CANVAS {
+	border: 2px solid #444;
+}
+		</style>
 	</head>
 	<body>
 		<center>
