--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@ CANVAS {
 		<center>
 			<canvas id="c" width="800" height="600">
 			</canvas>
+			<p>(Images (c) lots of people who aren't me, grabbed from google images, please don't sue.
+			<br>If you are an arty person who wants to provide better images, please mail me -
+			webmaster@shishnet.org)
 		</center>
 		<script src="base.js"></script>
 		<script src="ideas.js"></script>
@@ -22,6 +25,7 @@ CANVAS {
 		<script src="cg1.js"></script>
 		<script src="lv1.js"></script>
 		<script src="cg2.js"></script>
+		<script src="lv2.js"></script>
 		<script src="cg3.js"></script>
 		<script src="cg4.js"></script>
 		<script src="cg5.js"></script>
