--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ CANVAS {
 		<script src="lv2.js"></script>
 		<script src="cg3.js"></script>
 		<script src="cg4.js"></script>
+		<script src="lv4.js"></script>
 		<script src="cg5.js"></script>
 		<script src="cg6.js"></script>
 		<script>title();</script>
