Level 5. Please forgive me.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ CANVAS {
 			<p>(Images (c) lots of people who aren't me, grabbed from google images, please don't sue.
 			<br>If you are an arty person who wants to provide better images, please mail me -
 			webmaster@shishnet.org)
+			<p>Also my sincerest apologies to Mr Molyneux, and doubly so for Mrs Molyneux.
 		</center>
 		<script src="base.js"></script>
 		<script src="ideas.js"></script>
@@ -30,6 +31,7 @@ CANVAS {
 		<script src="cg4.js"></script>
 		<script src="lv4.js"></script>
 		<script src="cg5.js"></script>
+		<script src="lv5.js"></script>
 		<script src="cg6.js"></script>
 		<script>title();</script>
 	</body>
