some minor updates

--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@ CANVAS {
 		<center>
 			<canvas id="c" width="800" height="600">
 			</canvas>
-			<p>(Images (c) lots of people who aren't me, grabbed from google images, please don't sue.
-			<br>If you are an arty person who wants to provide better images, please mail me -
-			webmaster@shishnet.org)
-			<p>Also my sincerest apologies to Mr Molyneux, and doubly so for Mrs Molyneux.
+			<div style="width: 800px;">
+				<p>Images (c) lots of people who aren't me, grabbed from google images, please don't sue.
+				<p>Also my sincerest apologies to Mr Molyneux, and doubly so for Mrs Molyneux.
+				<p>This game seems to be spreading further than I expected, so I should also point out the
+				other thing that isn't mine (in case anyone didn't know already) -- the list of ideas came from
+				<a href="https://twitter.com/PeterMolydeux">Peter Molydeux's Twitter account</a>.
+				<p>-- Shish &lt;webmaster@shishnet.org&gt;
+				/ <a href="https://twitter.com/Shish2k">@Shish2k</a>
+			</div>
 		</center>
 		<script src="base.js"></script>
 		<script src="ideas.js"></script>
@@ -35,5 +40,20 @@ CANVAS {
 		<script src="lv5.js"></script>
 		<script src="cg6.js"></script>
 		<script>title();</script>
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-40520144-1']);
+  _gaq.push(['_setDomainName', 'shishnet.org']);
+  _gaq.push(['_setAllowLinker', true]);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 	</body>
 </html>
